--- a/MyStock.Application/Assets/Reports/SalesInvoice.html
+++ b/MyStock.Application/Assets/Reports/SalesInvoice.html
@@ -15,7 +15,7 @@
     <div class="container">
         <div class="page-header">
             <span class="title text-grey">
-                Счет-Фактура:
+                Счет-Фактура Продажи:
                 <small class="text-primary">#$Number$</small>
             </span>
             <div class="float-right">
@@ -41,7 +41,7 @@
                                 <span class="align-middle">$CustomerAddress$</span>
                             </div>
                             <div class="my-1">
-                                <div class="inline text-primary mr-2"><b>&#x2706;</b></div><span>$CompanyPhone$</span>
+                                <div class="inline text-primary mr-2"><b>&#x2706;</b></div><span>$CustomerPhone$</span>
                             </div>
                             <div class="my-1">
                                 <div class="inline mr-1"></div>
@@ -75,7 +75,7 @@
                         <thead>
                             <tr>
                                 <th>#</th>
-                                <th style="min-width: 140px;">Код</th>
+                                <th style="min-width: 120px;">Код</th>
                                 <th>Наименование</th>
                                 <th style="min-width: 140px;">Категория</th>
                                 <th>Кол-во</th>
@@ -92,23 +92,23 @@
                     <div class="mt-3">
                         <table style="margin-left: auto; margin-right: 0;">
                             <tr>
-                                <td class="text-right pr-2">Промежуточный итог</td>
+                                <td class="text-right pr-3">Промежуточный итог</td>
                                 <td class="text-right">$Subtotal$</td>
                             </tr>
                             <tr>
-                                <td class="text-right pr-2">Скидка</td>
+                                <td class="text-right pr-3">Скидка</td>
                                 <td class="text-right">$Discount$</td>
                             </tr>
                             <tr>
-                                <td class="text-right pr-2">Всего</td>
+                                <td class="text-right pr-3">Всего</td>
                                 <td class="text-right">$Total$</td>
                             </tr>
                             <tr>
-                                <td class="text-right pr-2">Оплаченно</td>
+                                <td class="text-right pr-3">Оплаченно</td>
                                 <td class="text-right">$Paid$</td>
                             </tr>
                             <tr class="text-110 font-weight-bold">
-                                <td class="text-right pr-2">Задолжность</td>
+                                <td class="text-right pr-3">Задолжность</td>
                                 <td class="text-right">$Balance$</td>
                             </tr>
                         </table>
@@ -117,8 +117,12 @@
                     <hr />
 
                     <div>
-                        <span class="text-secondary-d1 text-105"><i>Благодарим вас за выбор товаров в нашем магазине. Мы
-                                верим, что вы останетесь довольны нашими услугами.</i></span>
+                        <span class="text-secondary-d1 text-105">
+                            <i>
+                                Благодарим вас за выбор товаров в нашем магазине. Мы
+                                верим, что вы останетесь довольны нашими услугами.
+                            </i>
+                        </span>
                     </div>
                 </div>
             </div>
